...

        <TextView
            style="@style/Text"
            android:text="@string/location_label" />

        <EditText
            android:id="@+id/text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </LinearLayout>

    <Button
        android:id="@+id/button_report_location"
        style="@style/Button"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_red"
        android:onClick="reportWrite"
        android:text="@string/button_report_write"
...
