<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gary.myapplication.ReportWriteActivity"
    tools:showIn="@layout/activity_report_write">

    <Button
        style="@style/Button"
        android:layout_gravity="end"
        android:text="@string/button_help"
        android:onClick="showHelp"/>

    <TextView
        android:id="@+id/textview_location"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <EditText
            android:id="@+id/text_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_description"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right">

        <Button
            style="@style/Button"
            android:layout_marginRight="10dp"
            android:background="@drawable/button"
            android:onClick="clearText"
            android:text="@string/button_clear" />

        <Button
            style="@style/Button"
            android:background="@drawable/button_blue"
            android:onClick="submitText"
            android:text="@string/button_submit" />

    </LinearLayout>
</LinearLayout>
